2015-01-01 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCval.c:
	  Make SDCC_VERY_PEDANTIC default, if --less-pedantic is not specified.

2014-12-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: fixed typo, webdoc #69, thanks Petr Petyovsky
	* sdas/linksrc/aslink.h: added include "sdccconf.h" or "sdcc_vc.h"
	* sdas/linksrc/lkar.c: removed include "sdccconf.h"

2014-12-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/pic16/limits.h,
	* device/lib/_divsint.c,
	* device/lib/_divslong.c,
	* device/lib/_divuint.c,
	* device/lib/_divulong.c,
	* device/lib/_memset.c,
	* device/lib/_modsint.c,
	* device/lib/_modslong.c,
	* device/lib/_moduint.c,
	* device/lib/_modulong.c,
	* device/lib/_mulint.c,
	* device/lib/_mullong.c,
	* device/lib/hc08/_divuint.c,
	* device/lib/hc08/_divulong.c,
	* device/lib/pic16/libm/asincosf.c,
	* device/lib/pic16/libm/atanf.c,
	* device/lib/pic16/libm/logf.c,
	* device/lib/s08/_divuint.c,
	* device/lib/s08/_divulong.c: replaced deprecated predefined macros
	* device/lib/pic16/libio/i2c/i2copen.c: idem to fix bug 2336
	* src/SDCCast.c (ast_print),
	* src/SDCCicode.c (dbuf_printOperand): fixed warnings
	* support/regression/tests/bug-2313.c: fixed warning

2014-12-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2320.c:
	  Fix test for host.

2014-12-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdio.h:
	  Fix bug #2338.

2014-12-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  support/regression/tests/bug-2320.c:
	  Fixed bug #2320.

2014-12-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/pic14/gen.c (aopOp): fix typo in previous commit

2014-12-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/stm8/gen.c (aopOp),
	* src/z80/gen.c (aopOp),
	* src/hc08/gen.c (aopOp),
	* src/mcs51/gen.c (aopOp),
	* src/ds390/gen.c (aopOp),
	* src/pic16/gen.c (pic16_aopOp),
	* src/pic14/gen.c (aopOp): only use spill location if isspilt set
