@@ -30,10 +30,8 @@ testTortureExecute (void)
   struct B b = { .a.j = 5 };
   struct C c = { .a.j = 5 };
   struct D d = { .a.j = 5 };
-#if 0 // sdcc bug #2167
   foo (&b.a);
   foo (&c.a);
   foo (&d.a);
-#endif
   return;
 }
