@@ -1,3 +1,12 @@
+2015-01-06 Ben Shi <powerstudio1st AT 163 DOT com>
+	* src/SDCCast.c:
+	  Fix bug #2167 & #1967. (auto struct variables initialization)
+	* support/regression/tests/gcc-torture-execute-960326-1.c:
+	  Add more test cases.
+	* support/regression/tests/gcc-torture-execute-20050613-1.c:
+	* support/regression/tests/gcc-torture-execute-20030408-1.c:
+	  Enable test.
+
 2015-01-01 Ben Shi <powerstudio1st AT 163 DOT com>
 	* src/SDCCval.c:
 	  Make SDCC_VERY_PEDANTIC default, if --less-pedantic is not specified.
